src/model/snapshots/rgr__model__item__tests__to_span_lines_with_text_confirm_replacement.snap
---
source: src/model/item.rs
expression: new_item(RG_JSON_BEGIN).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "src/model/item.rs",
                style: Style {
                    fg: Some(
                        Magenta,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
