src/model/snapshots/rgr__model__item__tests__to_span_lines_with_text_selected-2.snap
---
source: src/model/item.rs
expression: new_item(RG_JSON_MATCH).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "197:",
                style: Style {
                    fg: Some(
                        Yellow,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "    ",
                style: Style {
                    fg: Some(
                        Yellow,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "Item",
                style: Style {
                    fg: Some(
                        Black,
                    ),
                    bg: Some(
                        Yellow,
                    ),
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "::new(",
                style: Style {
                    fg: Some(
                        Yellow,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: "rg_msg",
                style: Style {
                    fg: Some(
                        Black,
                    ),
                    bg: Some(
                        Red,
                    ),
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
            Span {
                content: ")",
                style: Style {
                    fg: Some(
                        Yellow,
                    ),
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
