src/model/snapshots/rgr__model__item__tests__to_span_lines_with_text_selected.snap
---
source: src/model/item.rs
expression: new_item(RG_JSON_BEGIN).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "src/model/item.rs",
                style: Style {
                    fg: Some(
                        Black,
                    ),
                    bg: Some(
                        Yellow,
                    ),
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
